Fix sidebar appearing on top of header (and showing large whitespace on top) (#4688)
* init

* header css

--- a/app/assets/src/components/common/Header/header.scss
+++ b/app/assets/src/components/common/Header/header.scss
@@ -13,7 +13,7 @@
   height: $header-height;
   padding: 0 15px;
   position: relative;
-  z-index: 11;
+  z-index: 900;
 
   .logo {
     flex: 0 0 auto;
